project(Chapter-08)
add_subdirectory(08-01)
add_subdirectory(08-02)
add_subdirectory(08-03)
add_subdirectory(08-04)
add_subdirectory(08-05)
add_subdirectory(08-06)
add_subdirectory(08-07)
add_subdirectory(08-08)
add_subdirectory(08-09)
add_subdirectory(08-10)
add_subdirectory(08-11)
add_subdirectory(08-12)
add_subdirectory(08-13)
add_subdirectory(08-14)
